More links re. neoliberalism.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1800,6 +1800,18 @@
         <i class="booktitle">Unsettling Statecraft: Democracy and Neoliberalism in the Central Andes</i>. Pittsburgh, <abbr>PA</abbr>: University of Pittsburgh Press, 1994.
         <a href="http://www.upress.pitt.edu/BookDetails.aspx?bookId=34923"><abbr>ISBN</abbr> 9780822955320</a>.
       </li>
+      <li>Simms, Andrew:
+        <a href="http://www.democracyatwork.info/10_years_after_neoliberalism_the_break_up_tour">10 years after: Neoliberalism - the Break-Up Tour</a>,
+        <i class="blog">Democracy at Work blog</i>, 17.08.2017.
+      </li>
+      <li>Chomsky, Noam:
+        <a href="https://www.youtube.com/watch?v=-3Wta_sonGs">The Global Shift in Power in Politics</a>
+        (YouTube, 15 minutes, 28.12.2010): talk at <abbr>TED</abbr>xWarwick.
+        Chomsky does not mention neoliberalism but gives several examples of powerful companies
+        influence politics. For example, Barack Obama became president partly thanks to financial support
+        from financial insitutions; in return, Obama gave them bailouts when the 2008 financial crisis erupted.
+        Processes like these undermine democracy.
+      </li>
     </ul>
 
     <h3>Marx: <i class="booktitle" lang="de">Das Kapital</i></h3>
@@ -1819,6 +1831,10 @@
         <i class="booktitle">The Marx-Engels Reader</i>. 2nd edition.
         Norton, 1978. (832 pages)
         <a  href="http://books.wwnorton.com/books/webad.aspx?id=12275"><abbr>ISBN</abbr> 978-0-393-09040-6</a>.
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/Richard_D._Wolff">Wolff, Richard D.</a>:
+        <a href="http://www.democracyatwork.info/">Democracy at Work</a>.
+        (Wolff is a Marxian economist.)
       </li>
     </ul>
 
