Harris (TED): Science Can Answer Moral Questions.

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -89,6 +89,11 @@
         See also the article 
         <a href="https://en.wikipedia.org/wiki/The_Moral_Landscape"><i class="booktitle">The Moral Landscape</i> on Wikipedia</a>.
       </li>
+      <li>Harris, Sam:
+        <a href="https://www.youtube.com/watch?v=Hj9oB4zpHww">Science Can Answer Moral Questions</a>
+        (YouTube, 23 minutes, 2010): talk at <abbr>TED</abbr>, February 2010.
+        See also the <a href="https://www.ted.com/talks/sam_harris_science_can_show_what_s_right"><abbr>TED</abbr> website</a>.
+      </li>
       <li>Earp, Brian D.:
         <a href="https://www.youtube.com/watch?v=rTJKX90SHxA">Can science determine morality? Sam Harris criticized</a>
         (17 February 2016):
