Stephen Walt on USA "spreading democracy".

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1611,6 +1611,21 @@
           </li>
         </ul>
       </li>
+      <li>Big Think:
+        <a href="https://www.youtube.com/watch?v=3QqRN8YNe_A">How American Foreign Policy Inspires Resistance, Insurgency, and Terrorism | Stephen Walt</a>
+        (YouTube, 9 minutes, 18.10.2017).
+        <a href="https://en.wikipedia.org/wiki/Stephen_Walt"><abbr>Prof.</abbr> Walt</a>, 
+        professor of International Affairs at 
+        <a href="https://www.hks.harvard.edu/faculty/stephen-walt">Harvard University</a>,
+        perpetuates the myth that American military invasions such as the invasion of Iraq,
+        and regime changes steered by the <abbr>USA</abbr> are examples efforts to <q>spread democracy abroad</q>.
+        <!--See the comment https://www.youtube.com/watch?v=3QqRN8YNe_A&lc=z23rdlgqqvzwylqrz04t1aokgl0ba03eh3v4khb31pmjrk0h00410 : 
+          If Donald Trump needs a minister of Newspeak, Prof. Walt is his man. Prof. Walt perpetuates the myth that interventions such as the invasion in Iraq are examples of efforts to spread democracy abroad. In other words, the interventions are supposedly good intentions gone wrong. This is a lie. The goal of American military interventions and of instigating regime changes is to protect American economic interests. The regime changes often prevented democracy from spreading. 
+          For example, Mohammad Mosaddegh was the democratically elected Prime Minister of Iran from 1951 until 1953. One of his political decisions was to nationalize the Iranian oil industry. The American CIA and the British Secret Intelligence Service supported a coup d'état which installed a government that brought back the foreign oil companies.
+          As for the invasion in Iraq, see Naomi Klein's book "The Shock Doctrine".
+          Big Think should be ashamed for publishing this type of propaganda on its channel.
+        -->
+      </li>
     </ul>
 
     <h3>Neoliberalism</h3>
