+ David Litt's book.

--- a/lijst.html
+++ b/lijst.html
@@ -410,6 +410,11 @@
       <a href="https://www.harpercollins.co.uk/9780008168186/tribe"><abbr>ISBN</abbr> 9780008168186</a>.
       (<a href="http://www.sebastianjunger.com/tribe-by-sebastian-junger">Sebastian Junger's website</a>.)
     </li>
+    <li>Litt, David: <i class="booktitle">Thanks, Obama: My Hopey, Changey White House Years</i>. Ecco, 2017. (320 pages)
+      <a href="https://www.harpercollins.com/9780062568458/thanks-obama"><abbr>ISBN</abbr> 9780062568458</a>.
+      <br />(See also <a href="https://www.youtube.com/watch?v=kuEkMkzgNjM">Former Obama Speechwriter Tells All</a>,
+      David Pakman Show, 22.10.2017, 13 minutes.)
+    </li>
     <!--
     <li> : <i class="booktitle"></i>. 
       <a href=""><abbr>ISBN</abbr> </a>.
