Larry Lessig at TEDxMidAtlantic.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1827,6 +1827,24 @@
         from financial insitutions; in return, Obama gave them bailouts when the 2008 financial crisis erupted.
         Processes like these undermine democracy.
       </li>
+      <li>Lessig, Larry:
+        <a href="https://www.youtube.com/watch?v=PJy8vTu66tE">Our democracy no longer represents the people. Here's how we fix it</a>
+        (YouTube, 21 minutes, 20.10.2015), <abbr>TED</abbr>xMidAtlantic.
+        Quotes <a href="https://en.wikipedia.org/wiki/William_M._Tweed">&ldquo;Boss&rdquo; Tweed</a>, who said
+        <q cite="https://en.wikiquote.org/wiki/William_M._Tweed">I don't care who does the electing, so long as I get to do the nominating.</q>
+        Essentially, big party donors influence who gets nominated, so roughly 0.2% of the population
+        determines who voters can vote for. See also
+        <a href="https://www.vox.com/2014/4/18/5624310/martin-gilens-testing-theories-of-american-politics-explained">Study: Politicians listen to rich people, not you</a>
+        (<i class="website">Vox</i>, 28 January 2015).
+        <!--
+          * Study by Brennan Center about how voting is made difficult for many people.
+          * https://duckduckgo.com/?q=gilens+page+democracy+voter&ia=web
+          * http://pnhp.org/blog/2014/04/21/gilens-and-page-average-citizens-have-little-impact-on-public-policy/ 
+          * Gilens and Page 2014: https://scholar.princeton.edu/sites/default/files/mgilens/files/gilens_and_page_2014_-testing_theories_of_american_politics.doc.pdf 
+          * "Remember that study saying America is an oligarchy? 3 rebuttals say it's wrong.": https://www.vox.com/2016/5/9/11502464/gilens-page-oligarchy-study 
+          * Martin Gilens: Affluence and Influence. Princeton, 2012: https://press.princeton.edu/titles/9836.html 
+        -->
+      </li>
     </ul>
 
     <h3>Marx: <i class="booktitle" lang="de">Das Kapital</i></h3>
