--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -560,7 +560,7 @@
         <a href="http://www.cambridge.org/de/academic/subjects/history/east-asian-history/cultural-revolution-trial-mao-and-gang-four?format=PB"><abbr>ISBN</abbr> 9780521135290</a>.
       </li>
       <!-- 
-      <li>
+      <li>:
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
@@ -615,11 +615,7 @@
     <!-- 
     <h4></h4>
     <ul>
-      <li>
-        <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr> </a>.
-      </li>
-      <li>
+      <li>:
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
@@ -1437,7 +1433,7 @@
         <a href="http://www.utb-shop.de/wahrheit-3334.html"><abbr>ISBN</abbr> 9783825232313</a>.
       </li>
       <!--
-      <li>
+      <li>:
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
@@ -1898,7 +1894,7 @@
         <a href="https://www.penguin.co.uk/books/23148/the-penguin-history-of-economics/9780140260427/"><abbr>ISBN</abbr>: 9780140260427</a>
       </li>
       <!--
-      <li>
+      <li>:
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
@@ -2037,8 +2033,8 @@
     -->
 
 
-    <h3>Other Topics</h3>
-    <h4>The Drowned World (Ballard)</h4>
+    <h2>Other Topics</h2>
+    <h3>The Drowned World (Ballard)</h3>
     <ul>
       <li>Ballard, James Graham:
         <i class="booktitle">The Drowned World</i>. [1962]. Fiftieth Anniversary Edition. Norton, 2012 (hardback) / 2013 (paperback).
@@ -2091,7 +2087,7 @@
       </li>
       -->
     </ul>
-    <h4>Gregory Bateson</h4>
+    <h3>Gregory Bateson</h3>
     <p><a href="https://en.wikipedia.org/wiki/Gregory_Bateson">Gregory Bateson</a> (1904 &ndash; 1980),
       <q>anthropologist, social scientist, linguist, visual anthropologist, semiotician, and cyberneticist</q>.
     </p>
@@ -2170,6 +2166,39 @@
         * Uwe Hoppe, Peter Fuchs: Systemtheoretisches Denken. Fragen an Prof. Dr. Fuchs (2 DVD, ca. 80 Min.) ISBN 978-3-89670-853-3: http://www.carl-auer.de/programm/artikel/titel/systemtheoretisches-denken-dvd/
         * Fritz B. Simon: Einführung in die systemische Wirtschaftstheorie. Carl-Auer Verlag, 2009. ISBN 978-3-89670-678-2: http://www.carl-auer.de/programm/artikel/titel/einfuehrung-in-die-systemische-wirtschaftstheorie/
       -->
+    </ul>
+
+    <h2>Belgium</h2>
+    <ul>
+      <li lang="nl">van Istendael, Geert:
+        <i class="booktitle">Het Belgisch labyrint</i>. Arbeiderspers, 2013.
+        <abbr>ISBN</abbr> 978-9029562522.
+      </li>
+      <li>Hill, Richard:
+        <i class="booktitle">The Art of Being Belgian</i>. Euro Public, 2005.
+        <abbr>ISBN</abbr> 978-9074440158.
+        (See also <a href="https://www.youtube.com/watch?v=6pP76fTDJew">Richard Hill Talks About : The Art of being Belgian</a> on YouTube.)
+      </li>
+      <li>Witte, Els; Craeybeckx, Jan; Meynen, Alain:
+        <i class="booktitle">Political History of Belgium: From 1830 Onwards</i>. <abbr title="Academic &amp; Scientific Publishers">ASP</abbr>, 2010. (516 pages)
+        <a href="http://www.aspeditions.be/nl-be/book/political-history-of-belgium/15249.htm"><abbr>ISBN</abbr> 9789054875178</a>.
+        (<a href="http://www.ipgbook.com/political-history-of-belgium-products-9789054875178.php?page_id=21"><abbr>ISBN</abbr> 9789054875178</a>.)
+      </li>
+      <li lang="nl">Scheltiens, Vincent:
+        <i class="booktitle">Met dank aan de overkant</i>. Polis (Pelckmans), 2017. (320 p.)
+        <a href="https://www.polis.be/met-dank-aan-de-overkant.html"><abbr>ISBN</abbr> 978-94-6310-165-3</a>.
+      </li>
+      <li>Huens, Jean-Léon; Vanderkelen, Auguste:
+        <i class="booktitle" lang="nl">'s Lands glorie: Een geïllustreerde geschiedenis van België</i>. Lannoo, 2015. (384 pages)
+        <a href="https://www.lannoo.be/nl/producten/geschiedenis-algemeen/s-lands-glorie"><abbr>ISBN</abbr> 9782873869403</a>.
+      </li>
+      <!--
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+      <!-- Matthias: "AMERICANS TRY BELGIAN FOODS!": https://www.youtube.com/watch?v=-gPi2KO-pR8 -->
     </ul>
 
     <p>More "other topics".</p>
