Al Bartlett quote on exponential function.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -53,17 +53,20 @@
   </nav>
 
   <main>
-    <!--blockquote id="introquote">
+    <blockquote id="introquote">
       <p>
-        <q>Science is neither a philosophy nor a belief system.  It is a combination of mental
-        operations that has become increasingly the habit of educated peoples, a culture
-        of illuminations hit upon by a fortunate turn of history that yielded the most
-        effective way of learning about the real world ever conceived.</q>
-        <cite>E. O. Wilson: <span class="booktitle">Consilience</span>. 
-          Reported in Hoyt's <span class="booktitle">New Cyclopedia Of Practical Quotations</span> (1922), p. 45.
-        </cite>
+        <q>The greatest shortcoming of the human race is our inability to understand the exponential function.</q>
+        <cite><a href="https://en.wikipedia.org/wiki/Albert_Allen_Bartlett">Albert Allen Bartlett</a>.</cite>
+        (See also <a href="http://www.albartlett.org/">Al Bartlett's website</a>.)
       </p>
-    </blockquote-->
+    </blockquote>
+    <!-- See also 
+      * Dr. Albert Bartlett The Exponential Function (11 minutes, published 25.08.2008): https://www.youtube.com/watch?v=LqcHG7QUK9k 
+      * Kurt Cobb: "Albert Bartlett: On message about exponential growth to the end". Resilience, 15.09.2013. http://www.resilience.org/stories/2013-09-15/albert-bartlett-on-message-about-exponential-growth-to-the-end/ 
+      * Kurt Cobb: "Albert Bartlett: On message about exponential growth to the end". Resource Insights, 15.09.2013. http://resourceinsights.blogspot.de/2013/09/albert-bartlett-on-message-about.html 
+      * "Anyone who believes exponential growth can go on forever in a finite world is either a madman or an economist." Attributed to Kenneth Boulding: https://en.wikiquote.org/wiki/Exponential_growth 
+        - More about Kenneth Boulding: https://en.wikiquote.org/wiki/Kenneth_Boulding 
+    -->
 
     <h2>History of Mathematics</h2>
     <p>See also the 
@@ -82,7 +85,7 @@
         &ldquo;Kurt Gödel and the Limits of Mathematics&rdquo;:
         <a href="https://www.youtube.com/watch?v=bYpSVSGBxis">part 1</a> (25 minutes),
         <a href="https://www.youtube.com/watch?v=CCac2oP4XB8">part 2</a> (22 minutes).
-      </li><!-- @@move to separate mathematics page -->
+      </li>
     </ul>
     <!-- Not about mathematics as a discipline but still nice: 
       * tecmath: https://www.youtube.com/user/tecmath (has several videos that help you speed up certain types of mental calculations)
