T. Hartmann: Trump anti-science agenda.

--- a/science/index.html
+++ b/science/index.html
@@ -53,17 +53,17 @@
   </nav>
 
   <main>
-    <!--blockquote id="introquote">
+    <blockquote id="introquote">
       <p>
-        <q>Science is neither a philosophy nor a belief system.  It is a combination of mental
+        <q>Science is neither a philosophy nor a belief system. It is a combination of mental
         operations that has become increasingly the habit of educated peoples, a culture
         of illuminations hit upon by a fortunate turn of history that yielded the most
         effective way of learning about the real world ever conceived.</q>
-        <cite>E. O. Wilson: <span class="booktitle">Consilience</span>. 
-          Reported in Hoyt's <span class="booktitle">New Cyclopedia Of Practical Quotations</span> (1922), p. 45.
+        <cite><a href="https://en.wikipedia.org/wiki/E._O._Wilson">E. O. Wilson</a>: 
+          <span class="booktitle">Consilience: The Unity of Knowledge</span> (1988).
         </cite>
       </p>
-    </blockquote-->
+    </blockquote>
 
     <p>This page collects mostly non-academic resources about science.</p>
 
@@ -763,6 +763,10 @@
       <li>It's Okay To Be Smart:
         <a href="https://www.youtube.com/watch?v=y2euBvdP28c">Why People Don't Believe In Climate Science</a>
         (YouTube, 8 minutes, 15.12.2014).
+      </li>
+      <li>Thom Hartmann Program:
+        <a href="https://www.youtube.com/watch?v=Sf-eY-lZad4">Trump's Anti-Science Agenda and How to Fight It (w/Guest Congressman Mark Pocan)</a>
+        (YouTube, 14 minutes, 25.01.2017).
       </li>
       <li>The Young Turks:
         <a href="https://www.youtube.com/watch?v=28nHpSzRwFA">Rush Limbaugh: Hurricanes Are Fake News</a>
