Th. Hartmann: Cost of Trump's Policies, etc.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1877,7 +1877,14 @@
         </ul>
         <br />See also the Thom Hartmann Program:
         <a href="https://www.youtube.com/watch?v=0dx9HskSwcA">The American Oligarchy is Already Here!</a>
-        (YouTube, 8 minutes, 19.10.2017).
+        (YouTube, 8 minutes, 19.10.2017),
+        <a href="https://www.youtube.com/watch?v=WGJa95BPx64">Whats The Cost Of Donald Trump's Policies?</a>
+        (YouTube, 9 minutes, 26.10.2017)<!--GOP turning citizens into serfs of companies?--> and
+        <a href="https://www.youtube.com/watch?v=STf44RxIkpY">Capitalism Will Last Until It's Victims Rise Up To Stop It (w/Guest Richard Wolff)</a>
+        (YouTube, 9 minutes, 26.10.2017).
+        <!-- + "The Koch brothers launch campaign to pass President Trump's tax cuts", 22.05.2017: http://society.thenet24h.com/688477/koch-brothers-launch-campaign-pass-president-trumps-tax-cuts.html
+          John McCormick: "Koch Network Targets Baldwin With $1.6 Million in Attack Ads", Bloomberg, 25.10.2017: https://www.bloomberg.com/news/articles/2017-10-26/koch-brothers-target-baldwin-with-1-6-million-in-tax-attack-ads 
+        -->
       </li>
     </ul>
 
@@ -1899,9 +1906,10 @@
         Norton, 1978. (832 pages)
         <a  href="http://books.wwnorton.com/books/webad.aspx?id=12275"><abbr>ISBN</abbr> 978-0-393-09040-6</a>.
       </li>
-      <li><a href="https://en.wikipedia.org/wiki/Richard_D._Wolff">Wolff, Richard D.</a>:
+      <li>Wolff, Richard D.:
         <a href="http://www.democracyatwork.info/">Democracy at Work</a>.
-        (Wolff is a Marxian economist.)
+        (<a href="https://en.wikipedia.org/wiki/Richard_D._Wolff">Richard Wolff</a> is a Marxian economist.
+        See also <a href="http://www.rdwolff.com/">Richard D. Wolff's website</a>.)
       </li>
     </ul>
 
