+ Smith, Evensky (Economics)

--- a/lijst.html
+++ b/lijst.html
@@ -227,6 +227,17 @@
 
   <h2>Economics and Politics</h2>
   <ul>
+    <li>Smith, Adam:
+      <strong><i class="booktitle">An Inquiry into the Nature and Causes of the Wealth of Nations</i></strong>.
+      Edited by Edwin Cannan. With a Preface by George J. Stigler.
+      University of Chicago Press, 1977. (Volume 1: 524 pages; volume 2: 568 pages)
+      <a href="http://www.press.uchicago.edu/ucp/books/book/chicago/I/bo3637045.html"><abbr>ISBN</abbr> 9780226763743</a>.
+      <!--Smith's text is reprinted in UK spelling. Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
+    </li>
+    <li>Evensky, Jerry: 
+      <i class="booktitle">Adam Smith's Wealth of Nations: A Reader's Guide</i>. Cambridge University Press, 2015. (293 pages)
+      <a href="http://www.cambridge.org/de/academic/subjects/economics/history-economic-thought-and-methodology/adam-smiths-wealth-nations-readers-guide?format=PB"><abbr>ISBN</abbr> 978-1107653764</a>.
+    </li>
     <li>Keynes, John Maynard: <i class="booktitle">The Essential Keynes</i>.
       Edited by Robert Skidelsky. Penguin Classics. Penguin 2016. (592 pages)
       <a href="http://www.penguinrandomhouse.com/books/317960/the-essential-keynes-by-john-maynard-keynes-edited-and-with-an-introduction-and-commentary-by-robert-skidelsky/"><abbr>ISBN</abbr>  9781846148132</a>.
@@ -424,6 +435,7 @@
     </li>
     -->
   </ul>
+  <!-- Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 -->
 
   </main>
 
