+ Sowell: Basic Economics.

--- a/lijst.html
+++ b/lijst.html
@@ -238,6 +238,10 @@
       <i class="booktitle">Adam Smith's Wealth of Nations: A Reader's Guide</i>. Cambridge University Press, 2015. (293 pages)
       <a href="http://www.cambridge.org/de/academic/subjects/economics/history-economic-thought-and-methodology/adam-smiths-wealth-nations-readers-guide?format=PB"><abbr>ISBN</abbr> 978-1107653764</a>.
     </li>
+    <li>Sowell, Thomas: <i class="booktitle">Basic Economics: A Common Sense Guide to the Economy</i>. Fifth edition. Basic Books, 2014.  
+      <a href="http://www.basicbooks.com/full-details?isbn=9780465060733"><abbr>ISBN</abbr> 978-0465060733</a>.
+      <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
+    </li>
     <li>Keynes, John Maynard: <i class="booktitle">The Essential Keynes</i>.
       Edited by Robert Skidelsky. Penguin Classics. Penguin 2016. (592 pages)
       <a href="http://www.penguinrandomhouse.com/books/317960/the-essential-keynes-by-john-maynard-keynes-edited-and-with-an-introduction-and-commentary-by-robert-skidelsky/"><abbr>ISBN</abbr>  9781846148132</a>.
