--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1908,6 +1908,14 @@
         <a href="https://www.youtube.com/watch?v=ok7ZJ8mS19Y">David Cay Johnston: The Perils Of Our Growing Inequality</a>
         (YouTube, 34 minutes, 01.06.2014).<!--@@rewatch!!-->
       </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/Buckley_v._Valeo">Buckley <abbr>v.</abbr> Valeo (1967)</a> (a <abbr>US</abbr> constitutional law Supreme Court case on campaign finance) and
+        <a href="https://en.wikipedia.org/wiki/Citizens_United_v._FEC">Citizens United <abbr>v.</abbr> <abbr>FEC</abbr> (2010)</a>
+        (another <abbr>US</abbr> constitutional law and corporate law case).
+        <br />On Buckley <abbr>v.</abbr> Valeo, see also
+        <a href="https://www.youtube.com/watch?v=FnYo8nkdOOU">Panel - A Landmark Decision Turns 40: A Conversation on Buckley <abbr>v.</abbr> Valeo</a> and
+        <a href="https://www.youtube.com/watch?v=S_ULr_jV2Q8">Q&amp;A - A Landmark Decision Turns 40: A Conversation on Buckley <abbr>v.</abbr> Valeo</a> (Brooklyn Law School, 26.01.2016).
+      </li>
     </ul>
 
     <h3>Marx: <i class="booktitle" lang="de">Das Kapital</i></h3>
