--- a/lijst.html
+++ b/lijst.html
@@ -242,6 +242,20 @@
       <a href="http://www.basicbooks.com/full-details?isbn=9780465060733"><abbr>ISBN</abbr> 978-0465060733</a>.
       <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ -->
     </li>
+    <li>Wolff, Richard D.; Resnick, Stephen A.:
+      <i class="booktitle">Contending Economic Theories: Neoclassical, Keynesian, and Marxian</i>. <abbr>MIT</abbr> Press, 2012. (424 pages)
+      <a href="https://mitpress.mit.edu/books/contending-economic-theories"><abbr>ISBN</abbr> 9780262018005</a>.
+      <!-- David Pakman recommends Wolff at https://www.youtube.com/watch?v=WaUuT_bpPDQ 
+        Wolff, Richard D.; Stephen A. Resnick (1987). Economics: Marxian versus Neoclassical. Baltimore: Johns Hopkins Press. ISBN 0-8018-3479-1. Probably out of print.
+      -->
+    </li>
+    <li>Deaton, Angus: <i class="booktitle">The Great Escape: Health, Wealth, and the Origins of Inequality</i>. 
+      Princeton University Press, 2013. 
+      <a href="https://press.princeton.edu/titles/10054.html"><abbr>ISBN</abbr> 9780691153544</a>.
+      <!-- Recommended by David Pakman: https://www.youtube.com/watch?v=WaUuT_bpPDQ
+        + Kahneman: Think Fast and Slow + Dan Ariely.
+      -->
+    </li>
     <li>Keynes, John Maynard: <i class="booktitle">The Essential Keynes</i>.
       Edited by Robert Skidelsky. Penguin Classics. Penguin 2016. (592 pages)
       <a href="http://www.penguinrandomhouse.com/books/317960/the-essential-keynes-by-john-maynard-keynes-edited-and-with-an-introduction-and-commentary-by-robert-skidelsky/"><abbr>ISBN</abbr>  9781846148132</a>.
