+ h3: The War Machine

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1918,6 +1918,25 @@
       </li>
     </ul>
 
+    <h3>The War Machine</h3>
+    <ul>
+      <li>Anand Gopal: <i class="booktitle">No Good Men Among the Living: America, The Taliban and the War Through Afghan Eyes</i>. Picador, 2015.</li>
+      <li>Ryan Grim: "The Taliban Tried to Surrender and the <abbr>U.S.</abbr> Rebuffed Them. Now Here We Are." <i class="website">The Intercept</i>, 22.08.2017.
+        <br />See also: The Jimmy Dore Show:
+        <a href="https://www.youtube.com/watch?v=RG629uoizro">Fact: Taliban Has Surrendered Multiple Times - US Rebuffed Them</a>
+        (YouTube, 14 minutes, 25.08.2017).
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/War_Machine_(film)">War Machine</a> (Wikipedia article about 2017 Netflix film.</li>
+      <!--
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      -->
+      <!--
+        * PROF. DR. ALBERT A. STAHEL: "Die Zeit nach dem NATO-Abzug aus afghanischer Sicht!", 06.10.2012: http://strategische-studien.com/2012/10/06/die-zeit-nach-dem-nato-abzug-aus-afghanischer-sicht/ 
+        * Thomas Barfield: Afghanistan: A Cultural and Political History. Princeton University Press, 2012. 
+      -->
+    </ul>
+
     <h3>Marx: <i class="booktitle" lang="de">Das Kapital</i></h3>
     <ul>
       <li lang="de">Marx, Karl:
