Thompson: Google's Sentiment Analyzer.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -98,6 +98,10 @@
         <i class="website">engadget</i>, 01.09.2017.
         The article's subtitle says, <q>The company's API for scoring toxicity in online discussions already behaves like a racist hand dryer.</q>
       </li>
+      <li>Thompson, Andrew:
+        <a href="https://motherboard.vice.com/en_us/article/j5jmj8/google-artificial-intelligence-bias">Google’s Sentiment Analyzer Thinks Being Gay Is Bad</a>,
+        <i class="website">Motherboard</i>, 25.10.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
