Kiriakou: Reluctant Spy + Jimmy Dore Show.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1953,6 +1953,16 @@
         (YouTube, 14 minutes, 25.08.2017).
       </li>
       <li><a href="https://en.wikipedia.org/wiki/War_Machine_(film)">War Machine</a> (Wikipedia article about 2017 Netflix film.</li>
+      <li>Kiriakou, George:
+        <i class="booktitle">Reluctant Spy: My Secret Life in the <abbr>CIA</abbr>'s War on Terror</i>. Skyhorse Publishing, 2009.
+        (See the <a href="http://www.johnkiriakou.com/books/the-reluctant-spy/">author's webspage</a> and the
+        <a href="https://en.wikipedia.org/wiki/John_Kiriakou">Wikipedia article about George Kiriakou</a>.)
+        <br />See also
+        Democracy Now!: <a href="https://www.democracynow.org/2015/2/9/exclusive_freed_cia_whistleblower_john_kiriakou">Exclusive: Freed CIA Whistleblower John Kiriakou Says "I &hellip;"</a>
+        (09.02.2015) and
+        The Jimmy Dore Show: <a href="https://www.youtube.com/watch?v=jdI9OZ-4QZQ"><abbr>CIA</abbr> Whistleblower Reveals <abbr>CIA</abbr> Still Torturing - Here's How</a>
+        (31.10.2017).
+      </li>
       <!--
       <li><a href=""></a></li>
       <li><a href=""></a></li>
