Site Navigation was not consistent.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
-  <title>Machine Learning and Artifical Intelligence | Philosophy and Science</title>
+  <title>Machine Learning and Artificial Intelligence | Philosophy and Science</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
@@ -13,7 +13,7 @@
 </head>
 <body class="sciencepage">
   <header>
-    <h1><span class="h1txt">Machine Learning and Artifical Intelligence</span></h1>
+    <h1><span class="h1txt">Machine Learning and Artificial Intelligence</span></h1>
   </header>
 
   <nav>
@@ -28,6 +28,7 @@
       <li><a href="../philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
+          <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
           <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
