--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -28,6 +28,7 @@
       <li><a href="../philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="../philosophy/learningphilosophy.html">Learning Philosophy</a></li>
+          <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
           <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
