+ h2: Ethics and Oversight.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -110,7 +110,7 @@
       -->
     </ul>
 
-    <h2>Unsorted Links</h2>
+    <h2>Ethics and Oversight</h2>
     <ul>
       <li>Sample, Ian:
         <a href="https://www.theguardian.com/technology/2017/jan/27/ai-artificial-intelligence-watchdog-needed-to-prevent-discriminatory-automated-decisions"><abbr>AI</abbr> watchdog needed to regulate automated decision-making, say experts</a>,
@@ -120,6 +120,14 @@
         <a href="https://www.youtube.com/watch?v=_2u_eHHzRto">The era of blind faith in big data must end</a>
         <i class="conference"><!--@@CSS class--><abbr>TED</abbr></i> (YouTube, 13 minutes, 07.09.2017).
       </li>
+      <li>Sample, Ian:
+        <a href="https://www.theguardian.com/science/2017/nov/01/artificial-intelligence-risks-gm-style-public-backlash-experts-warn">Artificial intelligence risks <abbr>GM</abbr>-style public backlash, experts warn</a>,
+        <i class="newspaper">The Guardian</i>, 01.11.2017.
+      </li>
+    </ul>
+
+    <h2>Unsorted Links</h2>
+    <ul>
       <li>Scott Adams:
         <a href="http://dilbert.com/strip/2017-09-05">Dilbert, 05.09.2017</a>.
       </li>
