Polonski; Hall & Pesenti study.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -122,14 +122,24 @@
       </li>
       <li>Sample, Ian:
         <a href="https://www.theguardian.com/science/2017/nov/01/artificial-intelligence-risks-gm-style-public-backlash-experts-warn">Artificial intelligence risks <abbr>GM</abbr>-style public backlash, experts warn</a>,
-        <i class="newspaper">The Guardian</i>, 01.11.2017.
+        <i class="newspaper">The Guardian</i>, 01.11.2017. Quote:
+        <q>The white male dominance of the field has led to health apps that only cater for male bodies, photo services that labelled black people as gorillas and voice recognition systems that did not detect women’s voices.</q>
       </li>
     </ul>
 
     <h2>Unsorted Links</h2>
     <ul>
+      <li>Polonski, Vyacheslav W.:
+        <a href="https://theconversation.com/how-artificial-intelligence-conquered-democracy-77675">How artificial intelligence conquered democracy</a>,
+        <i class="website">The Conversation</i>, 08.08.2017 (Creative Commons licence).
+        This article is about the use of artificial intelligence to target voters with specific messages.
+      </li>
       <li>Scott Adams:
         <a href="http://dilbert.com/strip/2017-09-05">Dilbert, 05.09.2017</a>.
+      </li>
+      <li>Hall, Wendy; Pesenti, Jérôme:
+        <a href="https://www.gov.uk/government/publications/growing-the-artificial-intelligence-industry-in-the-uk">Growing the artificial intelligence industry in the <abbr>UK</abbr></a>,
+        15.10.2017. This is an independent report commissioned by the <abbr>UK</abbr> Department for Digital, Culture, Media &amp; Sport and the Department for Business, Energy &amp; Industrial Strategy.
       </li>
     </ul>
 
