--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -112,11 +112,19 @@
 
     <h2>Ethics and Oversight</h2>
     <ul>
+      <li>Boer Deng:
+        <a href="http://www.spektrum.de/news/koennen-wir-roboter-mit-ethik-erschaffen/1356774" hreflang="de" lang="de">Können wir Roboter mit Ethik erschaffen?</a>,
+        <i class="magazine" lang="de">Spektrum</i>, 22.07.2015. (Translated from <i class="journal">Nature</i>.)
+      </li>
       <li>Sample, Ian:
         <a href="https://www.theguardian.com/technology/2017/jan/27/ai-artificial-intelligence-watchdog-needed-to-prevent-discriminatory-automated-decisions"><abbr>AI</abbr> watchdog needed to regulate automated decision-making, say experts</a>,
         <i class="newspaper">The Guardian</i>, 27.01.2017.
       </li>
-      <li>Cathy O'Neil:
+      <li>Buranyi, Stephen:
+        <a href="https://www.theguardian.com/inequality/2017/aug/08/rise-of-the-racist-robots-how-ai-is-learning-all-our-worst-impulses">Rise of the racist robots – how <abbr>AI</abbr> is learning all our worst impulses</a>,
+        <i class="newspaper">The Guardian</i>, 08.08.2017.
+      </li>
+      <li>O'Neil, Cathy:
         <a href="https://www.youtube.com/watch?v=_2u_eHHzRto">The era of blind faith in big data must end</a>
         <i class="conference"><!--@@CSS class--><abbr>TED</abbr></i> (YouTube, 13 minutes, 07.09.2017).
       </li>
@@ -124,6 +132,10 @@
         <a href="https://www.theguardian.com/science/2017/nov/01/artificial-intelligence-risks-gm-style-public-backlash-experts-warn">Artificial intelligence risks <abbr>GM</abbr>-style public backlash, experts warn</a>,
         <i class="newspaper">The Guardian</i>, 01.11.2017. Quote:
         <q>The white male dominance of the field has led to health apps that only cater for male bodies, photo services that labelled black people as gorillas and voice recognition systems that did not detect women’s voices.</q>
+      </li>
+      <li>Rosenberg, Scott:
+        <a href="https://www.wired.com/story/why-ai-is-still-waiting-for-its-ethics-transplant/">Why Artificial Intelligence Is Still Waiting For Its Ethics Transplant</a>,
+        <i class="magazine">Wired</i>, 01.11.2017.
       </li>
     </ul>
 
