--- a/lijst.html
+++ b/lijst.html
@@ -401,7 +401,9 @@
       <br />See also the <a href="http://www.robertlustig.com/hacking/">author's website</a>, 
       and talks by and interviews with the author:
       <a href="https://www.youtube.com/watch?v=EKkUtrL6B18">The Hacking of the American Mind with Dr. Robert Lustig</a> (33 minutes, <abbr title="University of California Television">UCTV</abbr>, 06.09.2017),
-      <a href="https://www.youtube.com/watch?v=VH3Ndztq7YM">Dr. Mercola and Dr. Lustig on The Hacking of the American Mind</a> (59 minutes).
+      <a href="https://www.youtube.com/watch?v=VH3Ndztq7YM">Dr. Mercola and Dr. Lustig on The Hacking of the American Mind</a> (59 minutes);
+      <a href="https://www.youtube.com/watch?v=zFkvNaUW8yc">How American Minds Get Hacked</a> (David Packman Show, 02.11.2017, 18 minutes).
+      <!--See also: Michael Moss: 'Salt, Sugar, Fat: How the Food Giants Hooked Us', W.H. Allen, 2014.-->
     </li>
     <li>Bauer, Johannes: <i class="booktitle">Programming Smalltalk – Object-Orientation from the Beginning</i>.
       Springer, 2015. 
