Democracy Now: Varoufakis on Global Capitalism.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1914,6 +1914,10 @@
           * C. Robert Gibson: "4 Ways GOP Governors Wage Class War", Huffpost, the blog, 21.06.2013: https://www.huffingtonpost.com/carl-gibson/4-ways-gop-governors-wage_b_3475101.html 
         -->
       </li>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=huilZjeSI9c">Yanis Varoufakis on Global Capitalism &amp; How Trump’s Tax Plan is Class War Against the Poor</a>
+        (YouTube, 6 minutes, 03.11.2017).
+      </li>
       <li>New Economic Thinking:
         <a href="https://www.youtube.com/watch?v=ok7ZJ8mS19Y">David Cay Johnston: The Perils Of Our Growing Inequality</a>
         (YouTube, 34 minutes, 01.06.2014).<!--@@rewatch!!-->
