--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -39,7 +39,7 @@
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
           <li class="notyet"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a></li>
-          <li class="notyet"><a href="../science/machine-learning.html">Machine Learning</a></li>
+          <li><a href="../science/machine-learning.html">Machine Learning</a></li>
           <li><a href="../science/doctoral-research.html">Dissertation / <abbr>PhD</abbr></a></li>
           <!--li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
         </ul>
