TYT / David Sirota: Credit Groups Lobbied Pence.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1902,6 +1902,10 @@
         <!-- + "The Koch brothers launch campaign to pass President Trump's tax cuts", 22.05.2017: http://society.thenet24h.com/688477/koch-brothers-launch-campaign-pass-president-trumps-tax-cuts.html
           John McCormick: "Koch Network Targets Baldwin With $1.6 Million in Attack Ads", Bloomberg, 25.10.2017: https://www.bloomberg.com/news/articles/2017-10-26/koch-brothers-target-baldwin-with-1-6-million-in-tax-attack-ads 
         -->
+        <br />See also The Young Turks (David Sirota):
+          <a href="https://www.youtube.com/watch?v=5glGs-H726o">Credit Groups Lobbied Pence For Months Before He Cast Tie-Breaking Vote To Gut Consumer Protections</a>
+          (YouTube, 5 minutes, 04.11.2017). About the vote abolishing a Consumer Financial Protection Bureau regulation
+          that allowed consumers to sue banks and credit agencies.
       </li>
       <li>Democracy Now!:
         <a href="https://www.youtube.com/watch?v=qhuGU5LS0IE">David Cay Johnston: Class War Is Being Waged by the Rich Against the Poor</a>
