TYT: Climate Collapse Outpacing Scientific Models.

--- a/science/index.html
+++ b/science/index.html
@@ -844,6 +844,10 @@
         <a href="https://www.youtube.com/watch?v=r7TL_BbAd-s">The Brutal Logic of Climate Change</a>
         (YouTube, 78 minutes, 24.05.2017): video of a talk at the University of Sheffield in March 2017.
       </li>
+      <li>The Young Turks:
+        <a href="https://www.youtube.com/watch?v=I5HVVHRfT68">Climate Collapse Outpacing Scientific Models</a>
+        (YouTube, 7 minutes, 05.11.2017).
+      </li>
       <!--
       <li>
         <a href=""></a>
