TYT: Fox News 'Algebras is Liberal Agenda'.

--- a/science/index.html
+++ b/science/index.html
@@ -745,6 +745,10 @@
         <!--@@PDF-->
       </li>
       <li>The Young Turks:
+        <a href="https://www.youtube.com/watch?v=nz7QKcSlk0g">Fox News: Algebra is Liberal Agenda!</a>
+        (YouTube, 8 minutes, 11.01.2013).
+      </li>
+      <li>The Young Turks:
         <a href="https://www.youtube.com/watch?v=CcNV4qiuKU4">Who Funds Climate Change Deniers?</a>
         (YouTube, 23 December 2013): video based on Jane Hamsher's article (see below).
       </li>
