--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -153,6 +153,10 @@
         <a href="https://www.gov.uk/government/publications/growing-the-artificial-intelligence-industry-in-the-uk">Growing the artificial intelligence industry in the <abbr>UK</abbr></a>,
         15.10.2017. This is an independent report commissioned by the <abbr>UK</abbr> Department for Digital, Culture, Media &amp; Sport and the Department for Business, Energy &amp; Industrial Strategy.
       </li>
+      <li lang="de">Bayerische Landeszentrale für neue Medien (<abbr>BLM</abbr>):
+        <a href="https://www.blm.de/infothek/magazin_tendenz/tendenz-2_2017.cfm">Tendenz, Ausgabe 02/17: Algorithmen</a>.
+        <!--@@check!!-->
+      </li>
     </ul>
 
   </main>
