Bronstein: Inscrutable neural networks.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -68,6 +68,11 @@
         <br />The first sentence of the abstract says,
         <q>The blind application of machine learning runs the risk of amplifying biases present in data.</q>
       </li>
+      <li>Bornstein, Aaron M.:
+        <a href="http://nautil.us/issue/40/learning/is-artificial-intelligence-permanently-inscrutable">Is Artificial Intelligence Permanently Inscrutable?</a>,
+        <i class="website">Nautilus</i>, 01.09.2016.
+        Article about concerns relating to inscrutable neural networks (as opposed to rule-based systems).
+      </li>
       <li>Rutkin, Aviva:
         <a href="https://www.newscientist.com/article/2115175-lazy-coders-are-training-artificial-intelligences-to-be-sexist/">Lazy coders are training artificial intelligences to be sexist</a>,
         <i class="magazine">New Scientist</i>, 05.12.2016.
