AI Now Institute: 10 recommendations for 2017.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -133,6 +133,15 @@
         <a href="https://www.youtube.com/watch?v=_2u_eHHzRto">The era of blind faith in big data must end</a>
         <i class="conference"><!--@@CSS class--><abbr>TED</abbr></i> (YouTube, 13 minutes, 07.09.2017).
       </li>
+      <li><abbr>AI</abbr> Now Institute:
+        <a href="https://medium.com/@AINowInstitute/the-10-top-recommendations-for-the-ai-field-in-2017-b3253624a7">The 10 Top Recommendations for the <abbr>AI</abbr> Field in 2017</a>,
+        <i class="blog"><abbr>AI</abbr> Now Institute on Medium</i>, 18.10.2017. Quote:
+        <q>When a new drug is released into the marketplace, it must first undergo rigorous scientific trials and testing, and continued monitoring of its medium and long-term effects. Care and caution is paramount in this domain, because if things go wrong, many people experience significant harm. The same is true for <abbr>AI</abbr> systems in high stakes domains.</q>
+        The first recommendation is,
+        <q>Core public agencies, such as those responsible for criminal justice, healthcare, welfare, and education (<abbr>e.g.</abbr> “high stakes” domains) should no longer use ‘black box’ <abbr>AI</abbr> and algorithmic systems.</q>
+        <br />This blog post is based on the
+        <a href="https://ainowinstitute.org/AI_Now_2017_Report.pdf"><abbr>AI</abbr> Now Report 2017 (<abbr>PDF</abbr>)</a>.
+      </li>
       <li>Sample, Ian:
         <a href="https://www.theguardian.com/science/2017/nov/01/artificial-intelligence-risks-gm-style-public-backlash-experts-warn">Artificial intelligence risks <abbr>GM</abbr>-style public backlash, experts warn</a>,
         <i class="newspaper">The Guardian</i>, 01.11.2017. Quote:
